--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,9 +2,22 @@
 
 body {background-color : #ededed; font-family : "Open Sans", sans-serif;}
 
-h1 {padding: 40px; text-align: center; font-size: 1.5em;}
+h1 {padding: 40px; text-align: center;}
 
-li a {text-decoration : none; color : #2d2f31;}
+h2{
+  text-align: center;
+
+}
+
+li a {
+  text-decoration : none; 
+  text-align: left;
+  color : #2d2f31;
+}
+
+ul{
+  text-align: left;
+}
 
 
 nav {
@@ -55,8 +68,10 @@ span::after {
 
 #touch2 {position: absolute; opacity: 0; height: 0px;}    
 
-#touch2:checked + .slide {height: 300px;} 
+#touch2:checked + .slide2 {height: 300px;} 
 
 div.movieSel{
   text-align: center;
 }
+
+
