--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,8 +1,14 @@
 
 
-body {background-color : #ededed; font-family : "Open Sans", sans-serif;}
+body {
+  background-color : #ededed; 
+  font-family : "Open Sans", sans-serif;
+}
 
-h1 {padding: 40px; text-align: center;}
+h1 {
+  padding: 40px; 
+  text-align: center;
+}
 
 h2{
   text-align: center;
